fix: spacing between rows

--- a/src/components/organisms/FigureRow/FigureRow.module.css
+++ b/src/components/organisms/FigureRow/FigureRow.module.css
@@ -1,4 +1,5 @@
 .row {
   display: flex;
   justify-content: space-evenly;
+  margin: 2rem 0;
 }
